--- a/src/components/calendar/style.css
+++ b/src/components/calendar/style.css
@@ -1,8 +1,3 @@
-.calendar__week_container {
-  display: flex;
-  flex-direction: row;
-}
-
 .calendar__month_header_container {
   display: flex;
   flex-direction: row;
@@ -18,6 +13,7 @@
   height: 100%;
   font-weight: bold;
   cursor: pointer;
+  min-height: 60px;
 }
 
 .calendar__day_container.current_month {
@@ -48,7 +44,7 @@
 .calendar_grid_container {
   flex-grow: 1;
   display: grid;
-  grid-template-rows: 24px auto;
+  grid-template-rows: 30px auto;
 }
 
 .calendar_container {
@@ -68,4 +64,24 @@
   border: none;
   font-size: 20px;
   background: white;
+}
+
+.calendar__week_container {
+  display: flex;
+  flex-direction: row;
+}
+
+.calendar-days-of-week {
+  display: flex;
+  flex-direction: row;
+}
+
+.calendar-day-of-week {
+  font-size: 20px;
+  background: grey;
+  color: white;
+  height: 100%;
+  border: 1px solid black;
+  text-align: center;
+  flex: 1;
 }
